--- a/index.html
+++ b/index.html
@@ -79,14 +79,7 @@
   </head>
   <body>
     <div id="root">
-      <!-- Fallback loading screen to prevent white screen -->
-      <div class="app-loading">
-        <div class="loading-content">
-          <h1>📱 X-ray ANWH</h1>
-          <p>Loading your workspace...</p>
-          <div class="loading-spinner"></div>
-        </div>
-      </div>
+      <!-- Empty root - React will handle all loading -->
     </div>
     <script type="module" src="/src/main.tsx"></script>
     
