--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
       /* Critical CSS to prevent white screen */
       #root {
         min-height: 100vh;
-        background: white;
+        background: white !important;
+      }
+      
+      /* Ensure body and html are white from start */
+      html, body {
+        background: white !important;
+        background-color: white !important;
       }
       
       /* Loading screen styles */
@@ -20,7 +26,7 @@
         align-items: center;
         justify-content: center;
         min-height: 100vh;
-        background: white;
+        background: white !important;
         color: #374151;
         font-family: -apple-system, BlinkMacSystemFont, sans-serif;
         text-align: center;
